--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "docs:build": "vuepress build docs"
       },
     "devDependencies": {
-      "vuepress": "^0.14.11"
+      "vuepress": "^0.14.11",
+      "js-yaml": ">=3.13.1"
     }
   }
