--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
         "docs:build": "vuepress build docs"
       },
     "devDependencies": {
-      "vuepress": "^0.14.11",
-      "js-yaml": ">=3.13.1"
+      "vuepress": "^1.1.0"
     }
   }
